RESOLVED FIXED59285
[Qt][Symbian] WKStringCopyQString function is not exported
https://bugs.webkit.org/show_bug.cgi?id=59285
Summary [Qt][Symbian] WKStringCopyQString function is not exported
Nancy Piedra
Reported 2011-04-23 16:42:44 PDT
On Symbian, the WKStringCopyQString function is not exported and therefore any application that tries to use this function won't compile. I have a fix for this and will upload a patch soon.
Attachments
Patch to remove duplicate declaration of WKStringCopyQString (1.27 KB, patch)
2011-04-24 04:37 PDT, Nancy Piedra
no flags
Nancy Piedra
Comment 1 2011-04-24 04:37:08 PDT
Created attachment 90883 [details] Patch to remove duplicate declaration of WKStringCopyQString
Andreas Kling
Comment 2 2011-04-26 10:23:32 PDT
Comment on attachment 90883 [details] Patch to remove duplicate declaration of WKStringCopyQString Looks sane, r=me
WebKit Commit Bot
Comment 3 2011-05-21 15:52:52 PDT
Comment on attachment 90883 [details] Patch to remove duplicate declaration of WKStringCopyQString Clearing flags on attachment: 90883 Committed r87023: <http://trac.webkit.org/changeset/87023>
WebKit Commit Bot
Comment 4 2011-05-21 15:52:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.