2011-05-21  Nancy Piedra  <nancy.piedra@nokia.com>

Reviewed by Andreas Kling.

        [Qt][Symbian] WKStringCopyQString function is not exported
        https://bugs.webkit.org/show_bug.cgi?id=59285

        A few functions were declared twice but without the export macro.
        On Symbian, the linking failed when trying to reference these functions.

        * UIProcess/API/qt/qgraphicswkview.h:

Canonical link: https://commits.webkit.org/76622@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87023 268f45cc-cd09-0410-ab3c-d52691b4dbfc